[package]
name = "GDBClass-of-26-bot"
authors = ["Luke Alvidrez <lalvidrez@caltech.edu>"]
version = "0.1.0"
edition = "2021"
description = "A bot written in Rust for the Blacker Class of 2026 discord server."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.11.5"

[dev-dependencies]
dotenv = "0.15.0"