[package]
name = "gdbclass_of_26_bot"
authors = ["Luke Alvidrez <lalvidrez@caltech.edu>"]
version = "0.1.0"
edition = "2021"
description = "A bot written in Rust for the Blacker Class of 2026 discord server."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = {version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"]}
tokio = { version = "1.22.0", features = ["macros", "rt-multi-thread", "signal"]}
dotenv = "0.15.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"